--- a/mini_project/mapAPI/test_Nougaga/htmlTest.html
+++ b/mini_project/mapAPI/test_Nougaga/htmlTest.html
@@ -8,27 +8,20 @@
 </head>
 
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c61a310f738f452fe0e606630bd69132&libraries=services,clusterer,drawing"></script>
+<script>
+    var geocoder = new kakao.maps.services.Geocoder();
 
-    <form>
-        <div class="form-group">
-            <p class="description">Please Enter Your Tracking Number.</p>
+    var callback = function (result, status) {
+        if (status === kakao.maps.services.Status.OK) {
+            console.log(result);
+        }
+    };
 
-            <input type="text" id="tracking-input" class="input-text full-width"
-                placeholder="Enter your Tracking number(s)"
-                onkeypress='return event.charCode >= 48 && event.charCode <= 57'>
-        </div>
-        <br>
-        <button type="submit" id="register" class="full-width btn-medium">Track</button>
-    </form>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('#register').prop('disabled', true);
-            $('#tracking-input').keyup(function () {
-                $('#register').prop('disabled', this.value === "");
-            })
-        });
-    </script>
+    geocoder.addressSearch('해남군 송지면', callback);
+</script>
 </body>
 
 </html>
