--- a/mini_project/mapAPI/test_Nougaga/htmlTest.html
+++ b/mini_project/mapAPI/test_Nougaga/htmlTest.html
@@ -20,8 +20,9 @@
             console.log(result);
         }
     };
-
     geocoder.addressSearch('해남군 송지면', callback);
+
+
 
     var geocoder = new kakao.maps.services.Geocoder();
 
@@ -31,16 +32,17 @@
             console.log('그런 너를 마주칠까 ' + result[0].address.address_name + '을 못가');
         }
     };
-
     geocoder.coord2Address(coord.getLng(), coord.getLat(), callback);   
     
-    daum.postcode.load(function(){
-        new daum.Postcode({
-            oncomplete: function(data) {
-                console.log(data.roadAddress)
-            }
-        }).open();
-    });
+
+
+    // daum.postcode.load(function(){
+    //     new daum.Postcode({
+    //         oncomplete: function(data) {
+    //             console.log(data)
+    //         }
+    //     }).open();
+    // });
      
 
 </script>
